  * [Roland] [From 2.5] Added man page for sourceforge-config (from a
    Docbook SGML file).  This fixes a lintian error.
  * [Christian] Added ldap support for chrooted anonymous cvs 
  * [Roland] Minor typo-fixes here and there, and a few cosmetic changes.
  * [Roland] [From 2.5] Fixed unix_box entries.
  * [Roland] Fixed leftover cruft in /etc/nsswitch.conf purging.

 -- Roland Mas <lolando@debian.org>  Thu,  7 Mar 2002 15:13:42 +0100

sourceforge (2.6-0+7) unstable; urgency=low

  * [Roland] [From 2.5] Added templates to conffiles.
  * [Roland] Added debconf magic to ask whether to replace a config file
    before doing it (in the post-installation and pre-remove phases).
  * [Christian] Changed to use cvsweb
  * [Roland] [From 2.5] Added "-s /bin/sh" when su'ing to postgres.
  * [Roland] [From 2.5] Moved templates to a Policy-compliant location
    (/etc/sourceforge/templates).
  * [Christian] modify install-ldap.sh to follow slapd undocumented
    changes
  * [Christian] removed test on /etc/ldap.secret in sourceforge.config
  * [Christian] changed template in local.inc.template to remove People in
    sys_ldap_admin dn

 -- Christian Bayle <bayle@aist.enst.fr>  Tue, 26 Feb 2002 18:20:31 +0100

sourceforge (2.6-0+6) unstable; urgency=low

  * [Roland] [From 2.5] Added docs.
  * [Roland] Added libmime-base64-perl and libhtml-parser-perl to
    dependencies (db-upgrade26.pl now uses MIME::Base64 and
    HTML::Entities).
  * [Roland] Added migration capability to the db-upgrade26.pl script.
    Database upgrades smoothly from 2.5 to 2.6.  Hopefully.  Not very well
    tested yet.
  * [Christian] Removed libmcrypt bug workaround

 -- Christian Bayle <bayle@aist.enst.fr>  Thu,  7 Feb 2002 18:30:27 +0100

sourceforge (2.6-0+5) unstable; urgency=low

  * [Christian] Added dependency to php4-mcrypt
  * [Christian] Temporary workaround for libmcrypt bug in local.inc.template
  * [Christian] Removed mcrypt-test.sh 
